librbd: deep_copy: resize head object map if needed

Fixes: http://tracker.ceph.com/issues/24399
Signed-off-by: Mykola Golub <mgolub@suse.com>
(cherry picked from commit 9e5b87c1935f902c4f2d8607b27b3d94fb20bb02)